<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_profileUser"
                    android:layout_width="163dp"
                    android:layout_height="126dp"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/baseline_supervised_user_circle_24"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/tabs"
                    app:layout_constraintEnd_toEndOf="@+id/img_profileUser"
                    app:layout_constraintHorizontal_bias="0.437"
                    app:layout_constraintStart_toStartOf="@+id/img_profileUser"
                    app:layout_constraintTop_toTopOf="@+id/img_profileUser"
                    app:layout_constraintVertical_bias="0.494"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tv_nameProfil"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/nameProfile"
                    android:textColor="@color/white"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_profileUser" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    app:layout_constraintBottom_toTopOf="@+id/tabs"
                    app:layout_constraintEnd_toEndOf="@+id/img_profileUser"
                    app:layout_constraintHorizontal_bias="0.505"
                    app:layout_constraintStart_toStartOf="@+id/img_profileUser"
                    app:layout_constraintTop_toBottomOf="@+id/tv_nameProfil"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/tv_count_follower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/count_follower"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/tabs"
                    app:layout_constraintEnd_toStartOf="@+id/tv_username"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_username" />

                <TextView
                    android:id="@+id/tv_count_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/count_following"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/tabs"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_username"
                    app:layout_constraintTop_toBottomOf="@+id/tv_username" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_nameProfil"
                    app:tabTextColor="@android:color/white" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tabs"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="730dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>